--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Pandius/NC-News#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.19.0",
     "pg": "^7.11.0"
   },
