--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-sorted": "^0.2.0",
     "mocha": "^6.1.4",
+    "sorted": "^0.1.1",
     "supertest": "^4.0.2"
   }
 }
